# ChangeLog for app-misc/gnote
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/gnote/ChangeLog,v 1.38 2013/12/24 15:36:21 pacho Exp $

*gnote-3.10.1 (24 Dec 2013)

  24 Dec 2013; Pacho Ramos <pacho@gentoo.org> +gnote-3.10.1.ebuild,
  -gnote-0.8.2.ebuild, -gnote-3.6.2.ebuild, -gnote-3.8.0.ebuild, metadata.xml:
  Version bump for Gnome 3.10, drop old

  08 Dec 2013; Pacho Ramos <pacho@gentoo.org> gnote-3.8.1.ebuild:
  x86 stable, bug #478252

  30 Nov 2013; Pacho Ramos <pacho@gentoo.org> gnote-3.8.1.ebuild:
  amd64 stable, bug #478252

  22 Aug 2013;  <joszi@gentoo.org> gnote-3.8.1.ebuild:
  Fix a problem pointed out by Pacho Ramos.

  22 Aug 2013;  <joszi@gentoo.org> gnote-3.8.1.ebuild:
  Fix too hasty commit: use proper src_install.

  22 Aug 2013;  <joszi@gentoo.org> gnote-3.8.1.ebuild, metadata.xml:
  Notify users about about optional net-fs/wdfs support, close bug #458864 by
  Olof Kindgren

*gnote-3.8.1 (13 May 2013)

  13 May 2013; Pacho Ramos <pacho@gentoo.org> +gnote-3.8.1.ebuild:
  Version bump

  07 Apr 2013; Gilles Dartiguelongue <eva@gentoo.org> gnote-3.8.0.ebuild:
  Apply team policy.

*gnote-3.8.0 (28 Mar 2013)

  28 Mar 2013; Pacho Ramos <pacho@gentoo.org> +gnote-3.8.0.ebuild:
  Version bump

  05 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org> -gnote-3.6.1.ebuild:
  Clean up old revision.

*gnote-3.6.2 (21 Jan 2013)

  21 Jan 2013; Alexandre Rostovtsev <tetromino@gentoo.org> -gnote-0.8.4.ebuild,
  +gnote-3.6.2.ebuild:
  Version bump. Drop old.

  16 Dec 2012; Alexandre Rostovtsev <tetromino@gentoo.org> gnote-3.6.1.ebuild:
  Update license, EAPI5-ize and de-9999-ize ebuild.

*gnote-3.6.1 (16 Dec 2012)

  16 Dec 2012; Gilles Dartiguelongue <eva@gentoo.org> +gnote-3.6.1.ebuild:
  Version bump for Gnome 3.6.

  22 Nov 2012; Gilles Dartiguelongue <eva@gentoo.org> -gnote-0.7.4.ebuild,
  -gnote-0.8.3.ebuild:
  Clean up old revisions.

*gnote-0.8.4 (18 Sep 2012)
