@@ -3,15 +3,17 @@ Hash: SHA256
 
 AUX gnote-0.8.2-signal_idle-header.patch 592 SHA256 a11009cc34e60e517ff102de7f336eee5bea6294454d0ce92a381d27f9647fea SHA512 22433446f06bab04f0fabc4db4f901b3a876efe25bd33a461a22f23a5554e4cbe0b0594ac8dcb71b86f0dcbd2bc8d6f39cf0baaabf4fec5820e945d3ffa8fe28 WHIRLPOOL b67ffa31a56bd60dbfda7e3c59441449333868f577fa780eb187c0ca01d8c9f809b4889d83d5f53310ec42e8248520402dc39b1c8ba94006a28e2693ead69ee5
 DIST gnote-3.10.1.tar.xz 3038896 SHA256 8466343c43cb5fb223a7abfe43e6e963f64403f96a3c823f5a37474e83d5e1a0 SHA512 f9713a2cced90e00d4aadc3d57a4e946f0d16f41ff72823e36c65ad56a8c0e2d112fe3bc82c487974f089daff962d69b40a04fd5ff3600c569a265fa1fbe8203 WHIRLPOOL e7075b00145145285a41da539666c4db4349e1d5f96075aba49506306533623e559ac3fa348cf0cc9f54194749bd6b2949e2ca8641ac80849520a7233c6260b9
+DIST gnote-3.10.2.tar.xz 3042052 SHA256 0311fb5cf4311e8db50628b4773bfc891c8cb843d655911888d48b1ff94aa220 SHA512 00dac283ccfb93d0d33131b5acb15e8b7c1d096810b652e98142722aff696c3a2967ad79c3c3952721a3f012d8df1a54051e94b1bc0bf4e11e0f87ab7177f849 WHIRLPOOL dc99c3bf86e05edbafe39ae5c19b2fdad5d4f693daa479f877c0991df0d48b986270883d3af910821e55958d9bbd68e7ef24086485498a2a1b7f8a5762106b06
 DIST gnote-3.8.1.tar.xz 2632020 SHA256 35bb4c5c0fd94bb3e8e5b91dcfff7e376408dd95fb2468ce9e248f6738d036aa SHA512 e8e320246522aba5311d60c4f9d2b90032f873f2fd0397fa03568dca0c86b9738cf52765f8779206ecd9d9b4a7b732f4bb64daabfda5e35dee49ec08e52dc51e WHIRLPOOL 3af01a5ed06c6bd9769e332769ede49733209a01ed13526af606830bdcc13b5d3d024cb35266f90b2cf777a17ae73ac76744fe450d5588db30bd1e95a7cf6267
 EBUILD gnote-3.10.1.ebuild 1685 SHA256 cbc68e100a75fff92054c1942aa9d034e69cf140f9f263abf5e35bbd15e129b2 SHA512 6f1571074c1b913fb1bcd53ae81582b895840ce1d1635c6197048b2b86bd994bb21d674fb0ccc73f29ea0fe21afad34792e6c0e965a8495a52824b66e14a55ad WHIRLPOOL 68e3f49f403b071972a21d10dd5a4aeb670d77ba1cf8a06387fcf1dca0e2fac64ec7d38ac2e82d12e569ed3c214a7a28e67edf6347f9163c81fbf80aaa9086e1
+EBUILD gnote-3.10.2.ebuild 1683 SHA256 6b342e920a98abdc14973c432d5199f883a2b14761f6dd5e87adade1cfc84204 SHA512 60a6334a504e32fb9afcf0dca4aab4702106b8ec9545c1315cbec824fe551b6875f51d8d60f4abbabddd2691fad9a475b9f16be142a7eb57bb1b2e054fdd592a WHIRLPOOL 65009331dfcf4ec71ce6c414fef8defd3afedc18ecce905ec024e4185d2faa6a86d9a197b847fd4aba92a455f51228b60cbe06bb8edc0d302a7f170076721a2e
 EBUILD gnote-3.8.1.ebuild 1613 SHA256 ea329b00a189ab0125dccf1e84f6a281284cdbc69ef0ee7e1cdf62ff07f3ff6e SHA512 7f3fd28c8087cd5ad5be413045edb39f94972acb34dc59e36c9a944f5fe36a97120160b34e4b5a4c90b5b4bea026fc551915a17f4e35a67dea76e3115642351a WHIRLPOOL 94e65a2fb26fec4869c68a07f24eb3c8bc7ef2b54c4234e92ec4ece86186c2c1b1a6474d9c05e2aea480997541fdcbb91c66c98f1c25f06eb5b02718ad0490f8
-MISC ChangeLog 6162 SHA256 ee9b05bca758ea5e99f89210252fde595bf4f4a42e9ba3ba90ade20aa60e237a SHA512 7cc4cae58a2286d81b7811ef8a9da7df03dec48a31dd9cb0e7f20238e007c52e5cd9a8213c0eff7d7a18c2f6dca48bf089095de1f0a88d36b8c049b6fd0caeed WHIRLPOOL fa3f897153ccfdc28bcc339d8b66458c74cfd049557008cb2868f5d46ef4e001fa0a221019ee8541d9a8777289aa3e00f503199f9ddda4167aef4222879fbbe2
+MISC ChangeLog 6282 SHA256 1b91ebd51ddc1e9f8dad791261c39c1c76b4d6608e84420c691223ca27520625 SHA512 56092c7d312286fdb8e0cb02db511fea5358e8126ac288eaabaae0a904535e41eb5d7faddeb9b07f83249e93e08f5176c7aadd9e621025d3b75976d6cdf237d7 WHIRLPOOL 4d49481a397ca5bef154f77296b79ea7c2b6189f3171b27c6c4146c7c11c695a4f5a08cf2ce9f7a9f658bac20443c363153ed09a3085a74675a16bc6d46f508f
 MISC metadata.xml 159 SHA256 b1ccd57b80d8d6ee7a9924844efd69830edfb744ab818d67e50a008b5aae7d4b SHA512 9408846d0f3194f62043b64e325aed9e8cce9a74b556865acf71facc3ad59a092dccbbb3c608ada40b73625eaac93a7bcc976858c6a47426bb8fadb6f830fe2b WHIRLPOOL 4700c8b71899b5acffcc46580315d4d116b478cfa283e0ea0569ab180e46850ce85d73c7370d989e53dd8aecb69ed843d2716bfebd3c5d74a7b5c3d4b94b96bb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlK5qfYACgkQCaWpQKGI+9TU9QCfcnA2AyJZ6OifhkgzlreevXp9
-IqYAn323yhAeiU1V9wUjUWCFz4Zt51qs
-=j5a0
+iEYEAREIAAYFAlL0H34ACgkQ1fmVwcYIWAb2swCgiOvJVMg8wDSgbXzN987nSt4q
+3rkAn1cxTtgcb2XaFpYsS+TcC+gzsUBt
+=iQ8n
 -----END PGP SIGNATURE-----
