@@ -1,6 +1,11 @@
 # ChangeLog for app-misc/gnote
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/gnote/ChangeLog,v 1.38 2013/12/24 15:36:21 pacho Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-misc/gnote/ChangeLog,v 1.39 2014/02/06 23:49:17 eva Exp $
+
+*gnote-3.10.2 (06 Feb 2014)
+
+  06 Feb 2014; Gilles Dartiguelongue <eva@gentoo.org> +gnote-3.10.2.ebuild:
+  Version bump.
 
 *gnote-3.10.1 (24 Dec 2013)
 
